--- a/style.css
+++ b/style.css
@@ -12,21 +12,29 @@
     --grayishBlue: hsl(220, 15%, 55%);
     --darkBlue: hsl(218, 44%, 22%);
 }
+body{
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
 
+}
 .container{
     margin: 30px;
-    padding: 30px;
+    padding: 80px;
     display: block;
     -webkit-user-select: none;
     margin: auto;
     cursor: zoom-in;
     background-color: var(--gray);
     transition: background-color 300ms;
+    width: 100%;
 }
 
 .img{
-    padding-top: 20px;
-    border-radius:10px;
+    border-radius: 10px !important;
     width: 200px;
     height: 200px;
     display: block;
@@ -34,19 +42,23 @@
 
 }
 .card{
+    background-color: var(--white);
+    width: 200px;
+    height: 320px;
+    border-radius: 10px;
+    padding: 20px; /* add some padding here */
     display: block;
-    margin:0 auto;
+    margin: 0 auto;
 }
 .text{
-    font-size: 15px;
+    font-size: 12px;
+    text-align: center;
+    padding-bottom: 30px;
+    font-family: 'Outfit', sans-serif;
+    color: hsl(221deg 8% 60%);
 }
 .title{
-
-}
-
-.card{
-    background-color: var(--white);
-    width: 240px;
-    height: 340px;
-    border-radius: 10px;
+    font-size: 16px;
+    text-align: center;
+    font-family: 'Outfit', sans-serif;
 }
